# DeepFact

./: .gitignore  README.md  pyproject.toml
baselines/: eval_gpt_researcher.py  eval_hf_agent.py
baselines/deep_research_hf/: hf_eval_agent.py  run.py
baselines/deep_research_hf/scripts/: mdconvert.py  text_web_browser.py
notebook/: download_data.ipynb  download_deep_research_bench.ipynb
src/deep_fact/: calculate_deep_fact_score.py  evaluate_claims.py  evaluate_report.py
src/deep_fact/configs/: deep_fact_eval_lite_gpt-4-1.yaml  deep_fact_eval_lite_gpt-4-1_gs5.yaml
src/deep_fact/evaluators/: __init__.py
src/deep_fact/evaluators/core/: __init__.py  deep_fact_eval.py  deep_fact_eval_lite.py
src/deep_fact/evaluators/factory/: __init__.py  agent_factory.py
src/deep_fact/evaluators/models/: __init__.py  types.py
src/deep_fact/evaluators/prompts/: deep_fact_eval.yaml  deep_fact_eval_lite.yaml
src/deep_fact/evaluators/search/: __init__.py  base.py  serper.py  tavily.py
src/deep_fact/evaluators/utils/: llm_client.py
src/deep_fact/evaluators/utils/context_compression/: compression.py  context_manager.py  costs.py  embeddings_filter.py  prompt_family.py
src/deep_fact/utils/: __init__.py  eval_citations.py  llm_tools.py  metric.py  utils.py
visualization/: .gitignore  README.md  app.py  requirements.txt
visualization/templates/: index.html
