[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deep_fact"
version = "0.1.0"
description = "Comprehensive toolkit for claim-level factual verification of deep research reports using AI-driven evaluation methods"
authors = [
    { name="Fact Eval Team", email="contact@facteval.dev" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["fact-checking", "research", "nlp", "ai", "verification", "claims"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "crawl4ai>=0.7.3",
    "filelock>=3.8.0",
    "langchain>=0.3.27",
    "langchain_openai>=0.3.30",
    "langchain_core>=0.3.83",
    "litellm>=1.75.9",
    "mammoth>=1.0.0",
    "markdownify>=0.11.0",
    "nest-asyncio>=1.5.0",
    "pandas>=1.5.0",
    "pdfminer.six>=20221105",
    "pydantic>=2.0.0",
    "pydub>=0.25.0",
    "puremagic>=1.0",
    "python-dotenv>=1.0.0",
    "python-pptx>=0.6.0",
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "SpeechRecognition>=3.8.0",
    "tavily-python>=0.1.0",
    "tenacity>=8.0.0",
    "tqdm>=4.64.0",
    "werkzeug>=2.0.0",
    "youtube-transcript-api>=0.6.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
jupyter = [
    "jupyter>=1.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "plotly>=5.0.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.18.0",
]

[project.urls]
Homepage = "https://github.com/your-org/fact_eval"
Documentation = "https://fact-eval.readthedocs.io/"
Repository = "https://github.com/your-org/fact_eval.git"
Issues = "https://github.com/your-org/fact_eval/issues"

[project.scripts]
fact-eval = "fact_eval.calculate_deep_fact_score:main"

# package discovery tells setuptools to look inside fact_eval/
[tool.setuptools.packages.find]
where = ["src"]
